--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Rikurse
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Notes from the Recurse Center
-baseurl: "/Rikurse" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
