--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: Rikurse
 description: >- # this means to ignore newlines until "baseurl:"
   Notes from the Recurse Center
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "Rikurse" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
 
